kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: movie-ingress
spec:
  ingressClassName: istio
  rules:
  - host: movie.chenyingqiao.com
    http:
      paths:
      - path: /
        backend:
          serviceName: movie
          servicePort: 80
  - host: talk.chenyingqiao.com
    http:
      paths:
      - path: /
        backend:
          serviceName: talk
          servicePort: 80
